# cargo-clinic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  justfile
.claude/: settings.json
.claude/hooks/: auto-check.sh  block-dangerous-commands.sh
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/cargo-clinic/: Cargo.toml
crates/cargo-clinic/src/: main.rs
crates/cargo-clinic/tests/: baseline_check.rs  measure_timing.rs  subcommand_invocation.rs
crates/clinic-core/: Cargo.toml
crates/clinic-core/src/: analyzers.rs  baseline.rs  collector.rs  duplicates.rs  error.rs  feature_why.rs  lib.rs  model.rs  prescriber.rs  timing.rs
crates/clinic-core/tests/: analyzer_inventory.rs  dup_detection.rs  report_golden.rs
crates/clinic-core/tests/golden/: analyzer-workspace.json  analyzer-workspace.md  analyzer-workspace.txt  dup-workspace.json  dup-workspace.md  dup-workspace.txt
docs/: dogfood.md  test-strategy.md
docs/adr/: 0001-rustc-wrapper-stable-timing.md  0002-qualitative-impact-only.md  0003-dev-harness-and-review-accumulation.md  0004-baseline-and-check-gate.md
examples/: github-action.yml
tests/fixtures/analyzer-workspace/: Cargo.toml
tests/fixtures/analyzer-workspace/app/: Cargo.toml
tests/fixtures/analyzer-workspace/app/src/: lib.rs
tests/fixtures/dup-workspace/: Cargo.toml
tests/fixtures/dup-workspace/app-a/: Cargo.toml
tests/fixtures/dup-workspace/app-b/: Cargo.toml
tests/fixtures/dup-workspace/mid/: Cargo.toml
tests/fixtures/dup-workspace/mid/src/: lib.rs
tests/fixtures/timing-workspace/: Cargo.toml
tests/fixtures/timing-workspace/app/: Cargo.toml
tests/fixtures/timing-workspace/app/src/: lib.rs
tests/fixtures/timing-workspace/leaf/: Cargo.toml
tests/fixtures/timing-workspace/leaf/src/: lib.rs
