[workspace]
resolver = "2"
members = ["crates/clinic-core", "crates/cargo-clinic"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rioX432/cargo-clinic"
homepage = "https://github.com/rioX432/cargo-clinic"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
