[package]
name = "cargo-clinic"
version = "0.1.0"
description = "Diagnose slow Rust builds and get ranked, actionable prescriptions"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cargo-clinic-core = { path = "../clinic-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
