[package]
name = "cargo-clinic-core"
version = "0.1.0"
description = "Collectors, analyzers, and prescriber for cargo-clinic"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cargo_metadata = "0.23"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
